--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "babel-node ./server.js"
+    "start": "babel-node ./src/server.js"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
